# agentshield

./: .agentshield.toml  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml
.githooks/: commit-msg
.github/codeql/: codeql-config.yml
.github/scripts/: check-release-invariants.sh
.github/workflows/: action-e2e.yml  agentshield.yml  ci.yml  codeql.yml  docker.yml  feature-matrix.yml  gitleaks.yml  release.yml  semgrep.yml  vscode.yml
docs/: ARCHITECTURE.md  BASELINES.md  BLOG_POST.md  CERTIFICATION.md  EGRESS.md  NEXT_STEPS.md  RELEASE_CHECKLIST.md  RULES.md  RUNTIME_GUARD.md  RUNTIME_JSON_SCHEMA.md  SUPPRESSIONS.md  VALIDATION_REPORT.md  awesome-list-submissions.md  claude-mcp-security.md  mcp-security-scanner.md  openai-agents-security.md
docs/harness/: CODE_REVIEW_POLICY.md  GATES.md  INVARIANTS.md  JSON_OUTPUTS.md  README.md  SKILLS.md  SPEC.md  VERIFICATION_MANIFEST.md  WHAT_WE_DONT_DO.md  progress.md
docs/releases/: 0.8.0.md  0.8.3.md  0.8.4.md  0.8.5.md  0.8.6.md  0.8.7.md
docs/specs/: capability-mismatch.md  composite-flow-transport.md  composite-toxic-flows.md  explainable-risk-score.md  local-client-discovery.md  owasp-mcp-mapping.md  risk-model-v1.md
examples/: README.md
examples/claude-mcp/: README.md
examples/fastmcp-server/: README.md
examples/langgraph-tool/: README.md
examples/openai-agents-sdk/: README.md
examples/playwright-mcp/: README.md
scripts/: rtk-check.sh
skills/dependency-triage/: SKILL.md
skills/huly/: SKILL.md
skills/loop-engineering/: SKILL.md
skills/loop-triage/: SKILL.md
skills/loop-triage-ci/: SKILL.md
skills/pr-review-triage/: SKILL.md
src/: baseline.rs  doctor.rs  error.rs  lib.rs  risk.rs  ux.rs
src/adapter/: crewai.rs  cursor_rules.rs  gpt_actions.rs  hermes.rs  langchain.rs  mcp.rs  mcp_metadata.rs  mod.rs  openclaw.rs  pipeline.rs
src/analysis/: composite_flow.rs  cross_file.rs  mod.rs  runtime_install.rs  sensitivity.rs
src/certify/: envelope.rs  mod.rs
src/config/: mod.rs
src/discovery/: filesystem.rs  mod.rs
src/egress/: mod.rs  policy.rs  proxy.rs
src/ir/: capability.rs  mod.rs  taint_builder.rs  tool_surface.rs
src/output/: console.rs  html.rs  json.rs  mod.rs  sarif.rs
src/parser/: json_schema.rs  python.rs  shell.rs  typescript.rs
src/rules/: finding.rs  mod.rs  (+1 more)
tests/: discovery_cli.rs  experimental_risk_cli.rs  explain_hotspots.rs  mcp_subdirectory.rs  path_filter_glob_semantics.rs  path_filters.rs  runtime_event.rs  runtime_guard.rs  runtime_mcp_proxy.rs  runtime_redaction.rs  runtime_schema.rs
vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
(+114 files in other folders)
